<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_titlebar_main">HeartRate Monitor</string>
    <string name="app_titlebar_hrgraph">HeartRate Graph</string>
    <string name="app_titlebar_ble_test">Bluetooth Test</string>
    <string name="app_titlebar_settings">Settings</string>
    <string name="Ble_Service">Ble Service</string>
    
    <string name="action_home">Home</string>
    <string name="action_hr_graph">Show Graph</string>
    <string name="action_ble_test">Bluetooth test</string>
    <string name="action_show_devices">Show Devices</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    
    <string name="unknown_device">Unknown Device!</string>
    <string name="ble_not_supported">BLE not supported!</string>
    <string name="error_bluetooth_not_supported">BLE not supported!</string>

</resources>
