<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ble_hr_monitor.MainActivity" >

    <item
        android:id="@+id/action_ble_test"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_ble_test"/>   
    
    <item
        android:id="@+id/action_show_devices"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_show_devices"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
